[gd_scene load_steps=14 format=3 uid="uid://dvx2owkk2si1t"]

[ext_resource type="Script" uid="uid://d1n0fc88oteex" path="res://scripts/pause_menu.gd" id="1_4inpj"]
[ext_resource type="Texture2D" uid="uid://b1ibe7r6nerac" path="res://assets/sprites/ui/pause_screen.png" id="1_6tw0m"]
[ext_resource type="FontFile" uid="uid://c3oi1so6vvcb2" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_0lmf7"]
[ext_resource type="PackedScene" uid="uid://dj5jaa1nygm4n" path="res://scenes/transition/transition.tscn" id="2_8fwbo"]
[ext_resource type="FontFile" uid="uid://dtrcwlapb5ygm" path="res://assets/fonts/Gloomy Things.ttf" id="3_0bnpd"]
[ext_resource type="Texture2D" uid="uid://bdpqa1ccs8oy6" path="res://assets/sprites/ui/Blank_Pressed.png" id="4_4inpj"]
[ext_resource type="Texture2D" uid="uid://hu41petkaxmh" path="res://assets/sprites/ui/Blank_Not-Pressed.png" id="5_8fwbo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2rlsb"]
content_margin_bottom = 15.0
texture = ExtResource("4_4inpj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_coo1x"]
content_margin_bottom = 15.0
texture = ExtResource("5_8fwbo")

[sub_resource type="Animation" id="Animation_4inpj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1560, 0)]
}

[sub_resource type="Animation" id="Animation_8fwbo"]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1910, 0)]
}

[sub_resource type="Animation" id="Animation_0bnpd"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1935, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8fwbo"]
_data = {
&"RESET": SubResource("Animation_4inpj"),
&"exit": SubResource("Animation_8fwbo"),
&"open": SubResource("Animation_0bnpd")
}

[node name="PauseMenu" type="CanvasLayer"]
layer = 3
script = ExtResource("1_4inpj")

[node name="Transition" parent="." instance=ExtResource("2_8fwbo")]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1957.0
offset_bottom = 1069.0
color = Color(0, 0, 0, 0.305882)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1560.0
offset_right = 364.0
offset_bottom = 1092.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 9.425
anchor_right = 38.875
anchor_bottom = 12.468
offset_left = -17824.7
offset_top = 90.0
offset_right = -73294.5
offset_bottom = -12656.1
texture = ExtResource("1_6tw0m")

[node name="Options" type="Button" parent="Control"]
texture_filter = 1
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_left = 401.0
offset_top = 389.0
offset_right = 749.0
offset_bottom = 519.0
theme_override_fonts/font = ExtResource("3_0bnpd")
theme_override_font_sizes/font_size = 87
theme_override_styles/hover = SubResource("StyleBoxTexture_2rlsb")
theme_override_styles/normal = SubResource("StyleBoxTexture_coo1x")
action_mode = 0
text = "Opcoes"

[node name="Menu" type="Button" parent="Control"]
texture_filter = 1
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_left = 645.0
offset_top = 565.0
offset_right = 993.0
offset_bottom = 695.0
theme_override_fonts/font = ExtResource("3_0bnpd")
theme_override_font_sizes/font_size = 87
theme_override_styles/hover = SubResource("StyleBoxTexture_2rlsb")
theme_override_styles/normal = SubResource("StyleBoxTexture_coo1x")
action_mode = 0
text = "Menu"

[node name="Back" type="Button" parent="Control"]
texture_filter = 1
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_left = 1016.0
offset_top = 728.0
offset_right = 1364.0
offset_bottom = 858.0
theme_override_fonts/font = ExtResource("3_0bnpd")
theme_override_font_sizes/font_size = 87
theme_override_styles/hover = SubResource("StyleBoxTexture_2rlsb")
theme_override_styles/normal = SubResource("StyleBoxTexture_coo1x")
action_mode = 0
text = "voltar"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255
anchor_right = 0.73
anchor_bottom = 0.339
offset_left = -45.6201
offset_top = 186.0
offset_right = -21.52
offset_bottom = -45.188
theme_override_fonts/font = ExtResource("2_0lmf7")
theme_override_font_sizes/font_size = 76
text = "Jogo Pausado"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8fwbo")
}

[connection signal="pressed" from="Control/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
